# -*- coding: utf-8 -*-

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[semantic_release]
version_variable = cart/__init__.py:__version__
upload_to_pypi = False
upload_to_release = True
patch_without_tag = True
